# Primer_parcial_IOT

./: README.md  api.py  data.json  package-lock.json  subscriber.py
ESP32/Codigo_ESP32/: Codigo_ESP32.ino
PythonApiFlahk/: README.md  api.py  data.json  relay_state.json  subscriber.py
WebSockets/WebSockets_iot/: pyproject.toml  server.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
proyecto-iot/: README.md  requirements.txt
proyecto-iot/dashboard/: index.html  script.js  style.css
proyecto-iot/gateway/: api.py  subscriber.py
