[project]
name = "websockets-iot"
version = "0.1.0"
description = ""
authors = [
    {name = "juanitogamer313",email = "150815385+JuanFCervantesAlonzo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "flask-socketio"
]

[tool.poetry]
packages = [{include = "websockets_iot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
